<resources>
    <string name="app_name">SistemasMoviles</string>
    <string name="mascotas_registradas">Mascotas Registradas</string>
    <string name="colores">Colores</string>
    <string name="perfil_de_usuario">Perfil de usuario</string>
    <string name="lenguaje">Lenguaje</string>
    <string name="configuraci_n">Configuración</string>
    <string name="config">Config</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>