<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_secondary95"
    tools:context=".ActivityConfiguracion">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar12"
        android:layout_width="410dp"
        android:layout_height="82dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/corner_radius_background"
        android:minHeight="?attr/actionBarSize"
        android:rotation="0"
        android:rotationX="0"
        android:rotationY="0"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar11" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar11"
        android:layout_width="410dp"
        android:layout_height="82dp"
        android:layout_marginTop="168dp"
        android:background="@drawable/corner_radius_background"
        android:minHeight="?attr/actionBarSize"
        android:rotation="0"
        android:rotationX="0"
        android:rotationY="0"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar5" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar13"
        android:layout_width="410dp"
        android:layout_height="82dp"
        android:layout_marginBottom="204dp"
        android:background="@drawable/corner_radius_background"
        android:minHeight="?attr/actionBarSize"
        android:rotation="0"
        android:rotationX="0"
        android:rotationY="0"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar12"
        app:layout_constraintVertical_bias="0.529" />

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/imageFilterButton15"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar12"
        app:layout_constraintEnd_toEndOf="@+id/toolbar12"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="@+id/toolbar12"
        app:layout_constraintTop_toTopOf="@+id/toolbar12"
        app:layout_constraintVertical_bias="0.456"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/imageFilterButton16"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar11"
        app:layout_constraintEnd_toEndOf="@+id/toolbar11"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="@+id/toolbar11"
        app:layout_constraintTop_toTopOf="@+id/toolbar11"
        app:layout_constraintVertical_bias="0.26"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/lenguaje"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/color_Backgraound_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar11"
        app:layout_constraintEnd_toStartOf="@+id/imageFilterButton16"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil_de_usuario"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/color_Backgraound_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar12"
        app:layout_constraintEnd_toStartOf="@+id/imageFilterButton15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar11" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colores"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/color_Backgraound_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar13"
        app:layout_constraintEnd_toStartOf="@+id/imageFilterButton17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar12" />

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/imageFilterButton17"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar13"
        app:layout_constraintVertical_bias="0.456"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="420dp"
        android:layout_height="86dp"
        android:layout_marginBottom="644dp"
        android:background="@drawable/corner_radius"
        android:minHeight="?attr/actionBarSize"
        android:rotation="0"
        android:rotationX="0"
        android:rotationY="0"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/imageFilterButton14"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/mascotas_registradas"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar5"
        app:layout_constraintEnd_toStartOf="@+id/Titulo_id"
        app:layout_constraintStart_toStartOf="@+id/toolbar5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432"
        app:srcCompat="?attr/homeAsUpIndicator"
        tools:ignore="ImageContrastCheck" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar10"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/color_primario"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/imageFilterButton9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageFilterButton8"
        app:layout_constraintStart_toEndOf="@+id/imageFilterButton6"
        app:layout_constraintTop_toTopOf="@+id/toolbar10"
        app:srcCompat="?android:attr/listChoiceIndicatorSingle"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/imageFilterButton8"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/toolbar10"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toStartOf="@+id/toolbar10"
        app:layout_constraintTop_toTopOf="@+id/toolbar10"
        app:layout_constraintVertical_bias="0.625"
        app:srcCompat="@android:drawable/ic_search_category_default"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/imageFilterButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="@+id/toolbar10"
        app:layout_constraintTop_toTopOf="@+id/toolbar10"
        app:layout_constraintVertical_bias="0.625"
        app:srcCompat="@android:drawable/ic_dialog_email"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/Titulo_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="-15dp"
        android:fontFamily="sans-serif"
        android:text="@string/config"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/id_EmailU"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>